Filter too long token validation set to make training-set validation-set the same shape.

--- a/tegashiki_symbol_preprocess.ipynb
+++ b/tegashiki_symbol_preprocess.ipynb
@@ -4352,19 +4352,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "42AOehoNCiL7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab_type": "code",
         "id": "PBhjpR3jCp4A",
         "colab": {}
@@ -4459,15 +4446,344 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-HWQC4WMV9cq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z2fZN5QrXvaL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Filter out too large validation set data to match training set max token len (it make model training code much simpler)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5sJtXyWoV8xl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6254df56-92d8-4f91-eefd-5699739d3510"
+      },
+      "source": [
+        "MAX_TRAIN_TOKEN_LEN"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BzeoiOyBVvCW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3827a894-758a-4734-8e3c-c255da483166"
+      },
+      "source": [
+        "# check validation set max\n",
+        "valid_label_df[\"exp_ids\"].map(lambda x: len(x.split(\",\"))).max()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "206"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qd93Xz-2WBxn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filter_too_long = valid_label_df[\"exp_ids\"].map(lambda x: len(x.split(\",\"))<=MAX_TRAIN_TOKEN_LEN-2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3eDFLt-nWM3O",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9a6f074d-fa79-456e-92ce-5d489f7799cc"
+      },
+      "source": [
+        "filter_too_long.shape"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(958,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WNAaf8_pWPBF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0c3fb106-b43c-44bc-d9b9-516d6f91b4ba"
+      },
+      "source": [
+        "valid_label_df.shape"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(958, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3z--GhMXWRJa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filtered_valid_label_df = valid_label_df[filter_too_long]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gkAAEjclVurO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6515c6b5-95e3-4d9e-946f-b6a77bc6ef08"
+      },
+      "source": [
+        "filtered_valid_label_df.shape"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(957, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TxwP3a2CWY2m",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b41920bd-6670-4755-bd85-4c5f78e6aaeb"
+      },
+      "source": [
+        "filtered_valid_label_df[\"exp_ids\"].map(lambda x: len(x.split(\",\"))).max()"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "76"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "863o1WE_XRhT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filtered_valid_label_df = filtered_valid_label_df.reset_index()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FQiVAXm1WYQz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "EvILEhh7DBMD",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "valid_decoder_input, valid_decoder_target= labeldf2decoder_data_nparray(valid_label_df, MAX_VALID_TOKEN_LEN)"
+        "valid_decoder_input, valid_decoder_target= labeldf2decoder_data_nparray(filtered_valid_label_df, MAX_TRAIN_TOKEN_LEN)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xw7QMfpGXsPU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d9701b7e-4c34-487c-9713-f8a80f7f6fe4"
+      },
+      "source": [
+        "valid_strokearr.shape"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(958, 115, 50, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4BKn-gWBX8BM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filtered_valid_strokearr = valid_strokearr[filter_too_long, :, :, :]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sLveqAegXr2h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "423c4faa-3326-4b95-930c-d3393fb89060"
+      },
+      "source": [
+        "tmp.shape"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(957, 115, 50, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4490,7 +4806,7 @@
         "colab": {}
       },
       "source": [
-        "write_to_file(\"crohme2019_padstroke_valid.tfrecord.gz\", valid_strokearr, valid_decoder_input, valid_decoder_target)"
+        "write_to_file(\"crohme2019_padstroke_valid_sametokenlen.tfrecord.gz\", filtered_valid_strokearr, valid_decoder_input, valid_decoder_target)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -4499,7 +4815,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "cf8a3f98-843e-4091-b362-cf83b6596624",
+        "outputId": "6a2f801e-fd5f-45a4-812d-53e587b0a17e",
         "id": "Qk1nL_k4DoaW",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4507,16 +4823,16 @@
         }
       },
       "source": [
-        "send_file(\"crohme2019_padstroke_valid.tfrecord.gz\")"
+        "send_file(\"crohme2019_padstroke_valid_sametokenlen.tfrecord.gz\")"
       ],
-      "execution_count": 47,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Copying file://crohme2019_padstroke_valid.tfrecord.gz [Content-Type=application/octet-stream]...\n",
-            "/ [1 files][849.6 KiB/849.6 KiB]                                                \n",
-            "Operation completed over 1 objects/849.6 KiB.                                    \n"
+            "Copying file://crohme2019_padstroke_valid_sametokenlen.tfrecord.gz [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][843.3 KiB/843.3 KiB]                                                \n",
+            "Operation completed over 1 objects/843.3 KiB.                                    \n"
           ],
           "name": "stdout"
         }
