First convencdec_myembed2.tflite trained.

--- a/TFLite.ipynb
+++ b/TFLite.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "vm9V_horyUR6",
         "colab_type": "code",
-        "outputId": "6f6b2e46-9d22-43f2-9428-ab17848d6ee6",
+        "outputId": "c575a32d-0844-4b82-ed13-f190bfb09e0e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -107,7 +107,7 @@
         "print(tf.VERSION)\n",
         "# print(tf.__version__)"
       ],
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,8 @@
         "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/export_expgen_rnn_small_dropout05_trainflaghandle/1560556738/\"\n",
         "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/export_expgen_convencdec_posfc/1560866662\"\n",
         "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_myembed/1560903469\"\n",
-        "MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_myembed2/1560910035\""
+        "# MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_myembed2/1560910035\"\n",
+        "MODEL_DIR=\"gs://karino2-tegashiki/models/exports/expgen_convencdec_myembed2/1560933034\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -220,10 +221,10 @@
       "metadata": {
         "id": "fjxZojtez8my",
         "colab_type": "code",
-        "outputId": "987de76a-1b0e-4cb8-a8ef-2fd17c5cc9e8",
+        "outputId": "c6be2d81-c5f3-4a16-e1c5-46e8308b8625",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 293
         }
       },
       "source": [
@@ -236,19 +237,154 @@
         "tflite_quant_model = converter.convert()\n",
         "open(\"converted_model.tflite\", \"wb\").write(tflite_quant_model)"
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING: Logging before flag parsing goes to stderr.\n",
+            "W0619 08:33:21.670366 140165457979264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/convert_saved_model.py:60: load (from tensorflow.python.saved_model.loader_impl) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.loader.load or tf.compat.v1.saved_model.load. There will be a new function for importing SavedModels in Tensorflow 2.0.\n",
+            "W0619 08:33:23.154832 140165457979264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use standard file APIs to check for files with this prefix.\n",
+            "W0619 08:33:24.570284 140165457979264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/lite/python/util.py:238: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+            "W0619 08:33:24.574053 140165457979264 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "357840"
+              "357832"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mxUbdMie3qdG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mv converted_model.tflite convencdec_myembed2.tflite"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CYXmr1N332B3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "a421a451-e136-4541-bafe-9795915685f2"
+      },
+      "source": [
+        "!gsutil cp convencdec_myembed2.tflite gs://karino2-tegashiki/models/mobile/"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Copying file://convencdec_myembed2.tflite [Content-Type=application/octet-stream]...\n",
+            "/ [1 files][349.5 KiB/349.5 KiB]                                                \n",
+            "Operation completed over 1 objects/349.5 KiB.                                    \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "35Welxzh31ym",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "29b09065-f677-47cd-c7b2-a75489a67fa8"
+      },
+      "source": [
+        "!gsutil ls gs://karino2-tegashiki/models/mobile/"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "gs://karino2-tegashiki/models/mobile/convencdec_myembed2.tflite\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I87hDpU14NTt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5zLpsHAA4NFg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ShZNS6a93qDy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6d0aab22-8510-4197-bcf2-23aeec7b8dee"
+      },
+      "source": [
+        "!ls -l *.tflite"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-rw-r--r-- 1 root root 357832 Jun 19 08:33 convencdec_myembed2.tflite\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
