Pattern 2 device data check.

--- a/TFLite.ipynb
+++ b/TFLite.ipynb
@@ -378,6 +378,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0hH7y6ei3UGh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "BEGIN_OF_SEQ = 113\n",
+        "MAX_STROKE_NUM=22\n",
+        "MAX_TOKEN_LEN=10+2\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5zLpsHAA4NFg",
         "colab_type": "code",
         "colab": {}
@@ -408,7 +423,7 @@
       "metadata": {
         "id": "Suj__mAGa9w0",
         "colab_type": "code",
-        "outputId": "1e7adea6-b538-44bb-e7e8-18ae3855b65f",
+        "outputId": "47af3bec-d0fb-49a2-e202-574f343e6cd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
@@ -417,28 +432,28 @@
       "source": [
         "interpreter.get_input_details()"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'dtype': numpy.int32,\n",
-              "  'index': 136,\n",
+              "  'index': 209,\n",
               "  'name': 'input_decoder',\n",
               "  'quantization': (0.0, 0),\n",
-              "  'shape': array([1, 5], dtype=int32)},\n",
+              "  'shape': array([ 1, 12], dtype=int32)},\n",
               " {'dtype': numpy.int32,\n",
-              "  'index': 140,\n",
+              "  'index': 213,\n",
               "  'name': 'stroke_input',\n",
               "  'quantization': (0.0, 0),\n",
-              "  'shape': array([ 1, 13, 50,  3], dtype=int32)}]"
+              "  'shape': array([ 1, 22, 50,  3], dtype=int32)}]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
     },
@@ -447,7 +462,7 @@
       "metadata": {
         "id": "8chFeWS_bJu0",
         "colab_type": "code",
-        "outputId": "3ad1daec-4e8d-47a5-ba0b-36228cfbf66a",
+        "outputId": "0a48420d-b94d-42c7-a36d-77959199ead0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
@@ -456,25 +471,386 @@
       "source": [
         "interpreter.get_output_details()"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'dtype': numpy.float32,\n",
-              "  'index': 153,\n",
+              "  'index': 226,\n",
               "  'name': 'time_distributed/Reshape_1',\n",
               "  'quantization': (0.0, 0),\n",
-              "  'shape': array([  1,   5, 114], dtype=int32)}]"
+              "  'shape': array([  1,  12, 115], dtype=int32)}]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W1-FF19s1qfu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "DECODER_INPUT_ID=209\n",
+        "STROKE_INPUT_ID=213\n",
+        "OUTPUT_ID=226"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IffXSDyg02O8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def predict(interpreter, inputst, inputdec):\n",
+        "  \n",
+        "  interpreter.set_tensor(DECODER_INPUT_ID, inputdec.astype(np.int32).reshape([1, MAX_TOKEN_LEN]))\n",
+        "  interpreter.set_tensor(STROKE_INPUT_ID, inputst.astype(np.int32).reshape([1, MAX_STROKE_NUM, 50, 3]))\n",
+        "  interpreter.invoke()\n",
+        "  inference_res = interpreter.get_tensor(OUTPUT_ID)\n",
+        "  return [inference_res[0, i, :].argmax() for i in range(MAX_TOKEN_LEN)]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3-EpWN-L01-A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import json"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vqze3dWC033W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "JSON_FILE=\"20190716_12013337.json\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fpk2bc8A01p1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "with open(JSON_FILE) as f:\n",
+        "  data = json.load(f)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yypg2m9808n0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "normalized = np.array(data[1]).reshape(MAX_STROKE_NUM, 50, 3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BAlypJx-2o6v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "moHfwkX42ohU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "81fe57b3-b830-472d-82ca-bc2ad6a4f20d"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 75, 34, 34, 34]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LQCVs25m3FE2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4b10dcfb-b2f6-4fef-8639-722125f50336"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 34, 34]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FgV3cfMV3pvd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0e791bcc-3003-48eb-e180-8e707b770c4d"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 0, 0, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 34, 34, 34, 34, 34, 47, 114, 114, 114]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8xNknq_Q3pbq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a9a921e6-b625-4825-99a9-e2fdfade0842"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 34, 0, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 109, 47, 114, 114, 114, 114, 114, 114, 114]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F3PS8Gj33pGq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a3716e23-7799-4653-de1f-289c5f785fc4"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 29, 34, 109, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 109, 114, 114, 114, 114, 114, 114, 114, 114]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SH5u7G6M7dKG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0_anePGm5OsO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "39b1918a-1c5e-4cee-d889-cadf97f09f8a"
+      },
+      "source": [
+        "predict(interpreter, normalized,  np.array([BEGIN_OF_SEQ, 37, 31, 47, 54, 0, 0, 0, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 34, 102, 34, 34, 34, 34, 47, 114, 114, 114]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vvs0RsKB7N8r",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1864569d-e041-4e34-e833-8f180173aadd"
+      },
+      "source": [
+        "predict(interpreter, normalized, np.array([113, 37, 29, 47, 52, 62, 52, 114, 0, 0, 0, 0]))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 29, 47, 52, 89, 29, 114, 0, 114, 80, 80, 35]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eG6rtEH73Ek2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ef4ef3f8-eb70-4ed2-8d27-ae5bc7cb4fae"
+      },
+      "source": [
+        "!ls -l converted_model.tflite"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-rw-r--r-- 1 root root 22985992 Jul 16 02:30 converted_model.tflite\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LqFlK4HV4Ec_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -780,12 +1156,20 @@
         "colab": {}
       },
       "source": [
-        "def predict(interpreter, inputst, inputdec):\n",
-        "  interpreter.set_tensor(136, inputdec.astype(np.int32).reshape([1, 5]))\n",
-        "  interpreter.set_tensor(140, inputst.astype(np.int32).reshape([1, 13, 50, 3]))\n",
-        "  interpreter.invoke()\n",
-        "  inference_res = interpreter.get_tensor(153)\n",
-        "  return [inference_res[0, i, :].argmax() for i in range(5)]"
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ucFfP6pG2D4Y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
